Working on fetching

--- a/query_web-client/src/main/resources/templates/index.html
+++ b/query_web-client/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="s002">
-      <form>
+      <form >
         <fieldset>
           <legend>SEARCH TRIPS</legend>
         </fieldset>
@@ -20,7 +20,7 @@
                 <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"></path>
               </svg>
             </div>
-            <input id="search" type="text" placeholder="Enter info" />
+            <input id="search" type="text" placeholder="Enter info" name="keyword" />
           </div>
           <div class="input-field second-wrap">
             <div class="icon-wrap">
@@ -40,7 +40,7 @@
           </div>
 
           <div class="input-field fifth-wrap">
-            <button class="btn-search" type="button">SEARCH</button>
+            <button class="btn-search" type="submit">SEARCH</button>
           </div>
         </div>
       </form>
